[package]
name = "swayflashy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
async-std = {version = "1.12.0", features = ["attributes"]}
keyframe = "1.1.1"
tap = "1.0.1"
swayipc-async = "2.0.0"
